--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.qmdeve.authenticator"
         minSdk { version = release(23) }
         targetSdk { version = release(36) }
-        versionCode 2
-        versionName "1.0.0-Beta02"
+        versionCode 3
+        versionName "1.0.0-Beta03"
     }
 
     buildTypes {
@@ -36,4 +36,6 @@ dependencies {
     implementation libs.androidx.security.crypto
     implementation libs.androidx.room.runtime
     annotationProcessor libs.androidx.room.compiler
+    implementation libs.okhttp
+    implementation libs.markwon
 }
