--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,12 @@ android {
         applicationId "com.qmdeve.authenticator"
         minSdk { version = release(23) }
         targetSdk { version = release(36) }
-        versionCode 3
-        versionName "1.0.0-Beta03"
+        versionCode 100000
+        versionName "1.0.0"
+
+        ndk {
+            abiFilters "arm64-v8a"
+        }
     }
 
     buildTypes {
@@ -24,6 +28,12 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_21
         targetCompatibility JavaVersion.VERSION_21
+    }
+
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging false
+        }
     }
 }
 
@@ -38,4 +48,12 @@ dependencies {
     annotationProcessor libs.androidx.room.compiler
     implementation libs.okhttp
     implementation libs.markwon
+    implementation libs.camera.core
+    implementation libs.camera.camera2
+    implementation libs.camera.lifecycle
+    implementation libs.camera.view
+    implementation libs.mlkit
+    implementation libs.guava
+    implementation libs.gson
+    implementation libs.zxing.core
 }
