--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
-agp = "9.0.0-beta01"
-activity = "1.12.0-rc01"
+agp = "8.13.1"
+activity = "1.12.0"
 appcompat = "1.7.1"
 commonsCodec = "1.20.0"
 constraintlayout = "2.2.1"
-material = "1.14.0-alpha06"
+material = "1.14.0-alpha07"
 okhttp = "5.3.2"
-roomRuntime = "2.8.3"
+roomRuntime = "2.8.4"
 securityCrypto = "1.1.0"
 markwon = "4.6.2"
 camera = "1.6.0-alpha01"
 mlkit = "17.3.0"
-guava = "31.0.1-android"
+guava = "33.5.0-android"
 gson = "2.13.2"
 zxing = "3.5.4"
 
