--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,2 +1,6 @@
-#Tue Nov 18 22:01:36 CST 2025
-distributionUrl=https://services.gradle.org/distributions/gradle-9.4.0-milestone-1-bin.zip
+#Sun Oct 26 23:47:37 CST 2025
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+distributionUrl=https://services.gradle.org/distributions/gradle-9.2.0-bin.zip
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
