--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -35,16 +35,22 @@ jobs:
           chmod +x ./gradlew
           ./gradlew assembleRelease
 
+        env:
+          RELEASE_STORE_FILE: ${{ secrets.RELEASE_STORE_FILE }}
+          RELEASE_STORE_PASSWORD: ${{ secrets.RELEASE_STORE_PASSWORD }}
+          RELEASE_KEY_ALIAS: ${{ secrets.RELEASE_KEY_ALIAS }}
+          RELEASE_KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
+
       - name: Create Tag for Manual Trigger
         if: github.event_name == 'workflow_dispatch' && !startsWith(github.ref, 'refs/tags/')
         run: |
           TAG_NAME="v$(date +%Y%m%d%H%M%S)"
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "me@qmdeve.com"
+          git config --local user.name "QmDeve"
           git tag $TAG_NAME
           git push origin $TAG_NAME
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
@@ -52,4 +58,4 @@ jobs:
           files: app/build/outputs/apk/release/*.apk
           generate_release_notes: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
