--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -30,16 +30,24 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Decode Keystore File
+        run: |
+          echo "${{ secrets.RELEASE_STORE_FILE }}" | base64 -d > app/release.keystore
+          ls -la app/release.keystore
+
       - name: Build Release APK
         run: |
           chmod +x ./gradlew
           ./gradlew assembleRelease
-
         env:
-          RELEASE_STORE_FILE: ${{ secrets.RELEASE_STORE_FILE }}
+          RELEASE_STORE_FILE: app/release.keystore
           RELEASE_STORE_PASSWORD: ${{ secrets.RELEASE_STORE_PASSWORD }}
           RELEASE_KEY_ALIAS: ${{ secrets.RELEASE_KEY_ALIAS }}
           RELEASE_KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
+
+      - name: Cleanup Keystore
+        run: |
+          rm -f app/release.keystore
 
       - name: Create Tag for Manual Trigger
         if: github.event_name == 'workflow_dispatch' && !startsWith(github.ref, 'refs/tags/')
