--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.qmdeve.authenticator"
         minSdk { version = release(23) }
         targetSdk { version = release(36) }
-        versionCode 100002
-        versionName "1.0.2"
+        versionCode 100003
+        versionName "1.0.3"
 
         ndk {
             abiFilters "arm64-v8a"
@@ -20,7 +20,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile file(System.getenv('RELEASE_STORE_FILE') ?: "")
+            storeFile file(System.getenv('RELEASE_STORE_FILE') ?: null)
             storePassword System.getenv('RELEASE_STORE_PASSWORD') ?: ""
             keyAlias System.getenv('RELEASE_KEY_ALIAS') ?: ""
             keyPassword System.getenv('RELEASE_KEY_PASSWORD') ?: ""
@@ -44,6 +44,13 @@ android {
         jniLibs {
             useLegacyPackaging false
         }
+    }
+
+    dependenciesInfo {
+        // Disables dependency metadata when building APKs (for IzzyOnDroid/F-Droid)
+        includeInApk = false
+        // Disables dependency metadata when building Android App Bundles (for Google Play)
+        includeInBundle = false
     }
 }
 
